fix: second review